Update 'gbfs4fyua-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:311ceb5264ecb56de9f062a8b3cb282132d0c431@sha256:a2f5030489b8a4a8269a182e9cc04bc222e0f81548b268ff36a83de1eac3d623

--- a/components/gbfs4fyua-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/gbfs4fyua-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gbfs4fyua-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:311ceb5264ecb56de9f062a8b3cb282132d0c431@sha256:a2f5030489b8a4a8269a182e9cc04bc222e0f81548b268ff36a83de1eac3d623
+          name: container-image
